--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         </div>
 
       </div>
-    </section><!-- End Why Us Section -->
+    </section>
 
 
 
@@ -237,8 +237,6 @@
 
       </div>
     </section>
-
-    <!-- ======= Team Section ======= -->
     <section id="program" class="team section-bg">
       <div class="container" data-aos="fade-up">
 
@@ -259,12 +257,14 @@
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
               Video a működésről:
-              <br><br>
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/2vLM8yXatuo"
+              <br><br>              
+            </p>
+            <div class=“youtube-container”>
+            <iframe src="https://www.youtube.com/embed/2vLM8yXatuo"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
-            </p>
+              </div>
           </div>
 
         </div>
