--- a/index.html
+++ b/index.html
@@ -254,13 +254,13 @@
             </p>
 
           </div>
-          <div class="col-lg-6 pt-4 pt-lg-0">
+          <div class="col-lg-6">
             <p>
               Video a működésről:
               <br><br>              
             </p>
             <div class=“youtube-container”>
-            <iframe src="https://www.youtube.com/embed/2vLM8yXatuo"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/2vLM8yXatuo"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
