--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
               <br><br>
               <img src="assets/img/ard.jpg" class="img-fluid animated" alt="">
             </p>
-            <p>
+            <p class="bal">
               Bővebb információt jelentkezésed után az általad megadott e-mail címre küldünk!
               <br><br>
               Jelentkezz még ma !
